--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,14 @@
     <!-- Map -->
     <div id="map" class="map-bg"></div>
 
+    <!-- Cinematic Gradients -->
+    <div
+        style="position: absolute; top: 0; left: 0; right: 0; height: 12rem; background: linear-gradient(to bottom, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0) 100%); pointer-events: none; z-index: 5;">
+    </div>
+    <div
+        style="position: absolute; bottom: 0; left: 0; right: 0; height: 12rem; background: linear-gradient(to top, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0) 100%); pointer-events: none; z-index: 5;">
+    </div>
+
     <!-- Search -->
     <div class="search-container">
         <div class="search-box">
