--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
     <!-- Sidebar -->
     <div class="db-sidebar">
         <div style="display: flex; gap: 0.5rem; align-items: center; margin-bottom: 2rem; padding: 0 0.5rem;">
-            <img src="{{ url_for('static', filename='img/Logo.png') }}" alt="ParkWell Logo"
+            <img src="{{ url_for('static', filename='img/Logo.png') }}" alt="ParkingSlotAfrica Logo"
                 style="height: 50px; width: auto;">
         </div>
 
