--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             <a href="/" style="text-decoration: none;">
                 <div
                     style="display: flex; gap: 0.5rem; align-items: center; background: rgba(17,24,39,0.5); padding: 0.5rem 1rem; border-radius: 99px;">
-                    <img src="{{ url_for('static', filename='img/Logo.png') }}" alt="ParkWell Logo"
+                    <img src="{{ url_for('static', filename='img/Logo.png') }}" alt="ParkingSlotAfrica Logo"
                         style="height: 32px; width: auto;">
                 </div>
             </a>
