--- a/templates/qrcode.html
+++ b/templates/qrcode.html
@@ -174,7 +174,7 @@
     <div class="print-card">
         <div class="brand-header">
             <ion-icon name="car-sport" style="font-size: 24px;"></ion-icon>
-            <span class="brand-text">ParkWell.</span>
+            <span class="brand-text">ParkingSlotAfrica.</span>
         </div>
 
         {% if spot.trust_level == 1 %}
@@ -206,7 +206,7 @@
         </div>
 
         <div class="footer-text">
-            Powered by ParkWell • Secure GPS Parking
+            Powered by ParkingSlotAfrica • Secure GPS Parking
         </div>
     </div>
 
